[tool.poetry]
name = "pamfilico-python-utils"
version = "0.1.8"
description = "Pamfilico Python utility functions and helpers"
authors = ["Kasper"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = ">=1.4.44,<1.5.0"
python-jose = "3.3.0"
hkdf = "0.0.3"
python-dotenv = "1.0.0"
flask = ">=2.0.0"
marshmallow = ">=3.0.0"
werkzeug = ">=2.0.0"
boto3 = ">=1.36.0"
tomli = ">=2.0.0"

[tool.poetry.scripts]
flask_route_usage_report = "pamfilico_python_utils.cli.flask_route_usage_report:main"
add_usage_comments = "pamfilico_python_utils.cli.add_usage_comments:main"

[tool.poetry.group.dev.dependencies]
commitizen = "^4.9.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.8"
version_files = [
    "pyproject.toml:version"
]
update_changelog_on_bump = true
tag_format = "v$version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
